2001-04-03  John Levon  <moz@compsoc.man.ac.uk>

	* Dialogs.C: s/popup/dialog/

	* FormUrl.C:
	* GnomeBase.C:
	* GnomeBase.h: s/ControlButton/ControlButtons/
	s/UndoAll/Restore/
	
2001-04-02  Michael Koziarski  <michael@koziarski.org>

	* FormCopyright.[Ch]: Reimplemented as an MVC dialog.

	* gnome_helpers.C: Some castings to avoid compilation break.

2001-04-01  Baruch Even  <baruch@lyx.org>

	* GUIRuntime.C (initApplication):  Changed strings to non-static.

2001-03-30  Baruch Even  <baruch@lyx.org>

	* FormCredits.C: Added the formatting of the credits text.

	* gnome_helpers.[Ch]: Added functions to get font name from font.

2001-03-30  Baruch Even  <baruch@lyx.org>

	* GnomeBase.[Ch]: Added the dialog as a responsibility.

	* FormUrl.[Ch]: Changed accordingly.
	* FormCredits.[Ch]: ditto.

	* gnomeBC.[Ch]: Fixed to get it to compile.

	* gnome_helpers.h: Changed declaration from const char * to char const *

2001-03-30  Angus Leeming  <a.leeming@ic.ac.uk>

	* GnomeBase.[Ch]: changed ControlBase to ControlButton.

2001-03-29  Angus Leeming  <a.leeming@ic.ac.uk>

	* gnomeBC.[Ch]: Patched in a slight reworking of Baruch Even's patch.
	Code moved into the generic template base class. Replaced
	setCancelCloseButton() with setButtonLabel().

2001-03-29  Baruch Even  <baruch@lyx.org>

	* gnomeBC.[Ch]: Changed to use the new GuiBC template.

2001-03-29  Baruch Even  <baruch@lyx.org>

	* FormUrl.C (d-tor):
	* FormCredits.C (d-tor): Removed the dialog_->destroy(), it was causing
	crashes on exit.

	* GnomeBase.C (d-tor): Added a check for times when the xml wasn't loaded.

2001-03-29  Michael Koziarski  <michael@koziarski.org>

	* Dialogs.C: Uncommented FormCredits in the #include and instantiate it.

	* Makefile.am: Added FormCredits.[Ch]

	* FormCredits.[Ch]: Created FormCredits dialog using libglade
	approach.  Text needs to be formatted still.

	* dialogs/diahelpcredits.glade: Created file.

2001-03-26  Baruch Even  <baruch@lyx.org>
