@@ -1,3 +1,7 @@
+2001-04-03  Baruch Even  <baruch@lyx.org>
+
+	* FileDialog.C: Added file to provide the gnome file dialog.
+
 2001-04-03  John Levon  <moz@compsoc.man.ac.uk>
 
 	* Dialogs.C: s/popup/dialog/
